# REmatch-js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
lib/: index.js  rematch_wasm.js  rematch_wasm.wasm
src/: CMakeLists.txt  wasm.cpp
test/: test.js  test_example.js
